fixed rounded corners on ios textarea and touch scoll

--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -50,6 +50,10 @@ a {
   }
 }
 
-input {
+div {
+  -webkit-overflow-scrolling: touch;
+}
+
+input, textarea {
   border-radius: 0;
 }
